@@ -33,28 +33,6 @@ NULL
 #' }
 #'
 #'
-#' @section Stats:
-#'
-#' All \code{stat_*} functions (like \code{stat_bin}) return a layer that
-#' contains a \code{Stat*} object (like \code{StatBin}). The \code{Stat*}
-#' object is responsible for rendering the data in the plot.
-#'
-#' Each of the \code{Stat*} objects is a \code{\link{ggproto}} object, descended
-#' from the top-level \code{Stat}, and each implements various methods and
-#' fields. To create a new type of Stat object, you typically will want to
-#' implement one or more of the following:
-#'
-#' \itemize{
-#'   \item \code{calculate}: Calculates a stat for a single group of data.
-#'   \item \code{calculate_groups}: Calculates stat for all groups. The method
-#'     typically calls \code{calculate} for each group.
-#'   \item \code{required_aes}: A character vector of aesthetics needed to
-#'     render the geom.
-#'   \item \code{default_aes}: A list (generated by \code{\link{aes}()} of
-#'     default values for aesthetics.
-#' }
-#'
-#'
 #' @section Positions:
 #'
 #' All \code{position_*} functions (like \code{position_dodge}) return a
@@ -73,8 +51,6 @@ NULL
 #' \itemize{
 #'   \item \code{adjust}: Adjusts the position of overlapping geoms.
 #' }
-#'
-
 #'
 #' @section Coordinate systems:
 #'
