@@ -1,3 +1,26 @@
+#' @section Stats:
+#'
+#' All \code{stat_*} functions (like \code{stat_bin}) return a layer that
+#' contains a \code{Stat*} object (like \code{StatBin}). The \code{Stat*}
+#' object is responsible for rendering the data in the plot.
+#'
+#' Each of the \code{Stat*} objects is a \code{\link{ggproto}} object, descended
+#' from the top-level \code{Stat}, and each implements various methods and
+#' fields. To create a new type of Stat object, you typically will want to
+#' implement one or more of the following:
+#'
+#' \itemize{
+#'   \item \code{calculate}: Calculates a stat for a single group of data.
+#'   \item \code{calculate_groups}: Calculates stat for all groups. The method
+#'     typically calls \code{calculate} for each group.
+#'   \item \code{inform_defaults(data, params)}: called once for each layer.
+#'      Used to inform the user how important parameter choices are made
+#'      by default.
+#'   \item \code{required_aes}: A character vector of aesthetics needed to
+#'     render the geom.
+#'   \item \code{default_aes}: A list (generated by \code{\link{aes}()} of
+#'     default values for aesthetics.
+#' }
 #' @rdname ggplot2-ggproto
 #' @format NULL
 #' @usage NULL
@@ -12,8 +35,11 @@ Stat <- ggproto("Stat",
 
   required_aes = c(),
 
-  calculate = function(self, data, scales, ...) {
+  calculate = function(data, scales, ...) {
     data
+  },
+
+  inform_defaults = function(data, params) {
   },
 
   calculate_groups = function(self, data, scales, ...) {
