@@ -116,29 +116,6 @@ implement one or more of the following:
 }
 }
 
-\section{Stats}{
-
-
-All \code{stat_*} functions (like \code{stat_bin}) return a layer that
-contains a \code{Stat*} object (like \code{StatBin}). The \code{Stat*}
-object is responsible for rendering the data in the plot.
-
-Each of the \code{Stat*} objects is a \code{\link{ggproto}} object, descended
-from the top-level \code{Stat}, and each implements various methods and
-fields. To create a new type of Stat object, you typically will want to
-implement one or more of the following:
-
-\itemize{
-  \item \code{calculate}: Calculates a stat for a single group of data.
-  \item \code{calculate_groups}: Calculates stat for all groups. The method
-    typically calls \code{calculate} for each group.
-  \item \code{required_aes}: A character vector of aesthetics needed to
-    render the geom.
-  \item \code{default_aes}: A list (generated by \code{\link{aes}()} of
-    default values for aesthetics.
-}
-}
-
 \section{Positions}{
 
 
@@ -190,6 +167,32 @@ object, you typically will want to implement one or more of the following:
   \item \code{is_linear}: Returns \code{TRUE} if the coordinate system is
     linear; \code{FALSE} otherwise.
   \item \code{expand_defaults}: Expands the default ranges.
+}
+}
+
+\section{Stats}{
+
+
+All \code{stat_*} functions (like \code{stat_bin}) return a layer that
+contains a \code{Stat*} object (like \code{StatBin}). The \code{Stat*}
+object is responsible for rendering the data in the plot.
+
+Each of the \code{Stat*} objects is a \code{\link{ggproto}} object, descended
+from the top-level \code{Stat}, and each implements various methods and
+fields. To create a new type of Stat object, you typically will want to
+implement one or more of the following:
+
+\itemize{
+  \item \code{calculate}: Calculates a stat for a single group of data.
+  \item \code{calculate_groups}: Calculates stat for all groups. The method
+    typically calls \code{calculate} for each group.
+  \item \code{inform_defaults(data, params)}: called once for each layer.
+     Used to inform the user how important parameter choices are made
+     by default.
+  \item \code{required_aes}: A character vector of aesthetics needed to
+    render the geom.
+  \item \code{default_aes}: A list (generated by \code{\link{aes}()} of
+    default values for aesthetics.
 }
 }
 \seealso{
