@@ -1,6 +1,9 @@
 ggplot2 1.0.1.9xxx
 ----------------------------------------------------------------
 
+* `geom_histogram()` and `geom_smooth()` now only inform you about the
+  default values once per layer, rather than once per panel (#1220).
+
 * `geom_bar()` and `geom_histogram()` no longer share `stat_bin()`. Now
   `geom_bar()` has its own stat, `stat_bar()`. This is useful if you want to
   display a bar chart of continuous data, drawing a bar at each unique
